--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.8",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.5.0",
     "core-js": "^3.4.3",
+    "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
