--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "core-js": "^3.4.3",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
